--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 server.port=8081
 
-## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/aws_practice
-spring.datasource.username=root
-spring.datasource.password=root
+## LOCAL
+#spring.datasource.url=jdbc:mysql://localhost:3306/aws_practice
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto=update
+
+
+## DEVELOPMENT
+spring.datasource.url=jdbc:mysql://aws-services.chvnefw9dk2d.ap-south-1.rds.amazonaws.com:3306/aws_practice
+spring.datasource.username=aws
+spring.datasource.password=awspractice
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
